# tailslayer-rs

./: Cargo.toml  NOTICE  README.md
benches/: layout.rs
examples/: basic.rs  hedged_read.rs  linux_hugetlb.rs  original_style.rs  risk_limits.rs  trefi_probe.rs
src/: error.rs  layout.rs  lib.rs  linux_hardware.rs  linux_low_level.rs  runtime.rs  storage.rs  sys.rs
