[package]
name = "tailslayer"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "Apache-2.0"
description = "Low-latency replicated reads with optional hugepage backing and hedged worker threads."
repository = "https://github.com/OctopusTakopi/tailslayer-rs"
readme = "README.md"
keywords = ["latency", "memory", "linux", "hedging", "systems"]
categories = ["concurrency", "memory-management", "hardware-support"]

[lib]
name = "tailslayer"
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[dev-dependencies]
clap = { version = "4.6", features = ["derive"] }
criterion = "0.8.2"

[[bench]]
name = "layout"
harness = false
